# PythonCT

./: README.md  ballcollecter.py  calculator.py  commandterm.py  devtools.py  fightgame.py  gamehub.py  gmail.py  inspyre.py  main.py  pyproject.toml  serverID.txt  system.py  timer.py  updateinfo.txt  wordbomb.py
apps/: chat.py  timer.py
apps/devtools/: calculator.py  devtools.py  inspyre.py
info/layout/: commands.txt  layout.txt
