[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Logan Spong loganspongeybob@gmail.com>"]
description = "A console based OS with Linux like interface."
name = "PythonOS"
version = "0.1.0"
[tool.poetry.dependencies]
colorama = "^0.4.3"
python = "^3.7"
art = "^4.7"
getkey = "^0.6.5"
[tool.poetry.dev-dependencies]
